--- a/diafitass.html
+++ b/diafitass.html
@@ -167,7 +167,7 @@
             <img
               src="assets/Diafit Ass (3).png"
               alt="Изображение продукта Diafit Ass"
-              class="rounded-lg shadow-2xl max-w-xs"
+              class="rounded-lg max-w-xs"
               width="150"
               height="150"
             />
@@ -253,7 +253,7 @@
             <img
               src="assets/Diafit Ass (3).png"
               alt="Изображение продукта Diafit Ass"
-              class="rounded-lg shadow-2xl max-w-sm"
+              class="rounded-lg max-w-sm"
               width="150"
               height="150"
             />
@@ -660,8 +660,45 @@
         </div>
       </section>
 
+      <!-- Video Explanation Section -->
+      <section class="py-16 bg-white">
+        <div class="container mx-auto px-6">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
+          >
+            <span class="lang-ru">Как это работает? Смотрите видео!</span>
+            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
+            <span class="lang-en">How Does It Work? Watch the Video!</span>
+          </h2>
+          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
+            <span class="lang-ru"
+              >Узнайте все о преимуществах "Диафит Асс" в этом коротком и
+              информативном видео.</span
+            >
+            <span class="lang-uz"
+              >Ushbu qisqa va ma'lumotli videoda "Diafit Ass"ning barcha
+              afzalliklari haqida bilib oling.</span
+            >
+            <span class="lang-en"
+              >Learn all about the benefits of "Diafit Ass" in this short and
+              informative video.</span
+            >
+          </p>
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed//-dnaOl9SINM"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
+
       <!-- 6. Expert Opinion -->
-      <section class="section-gradient py-16">
+      <!-- <section class="section-gradient py-16">
         <div class="container mx-auto px-6">
           <div
             class="bg-white rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
@@ -720,7 +757,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- 7. Secondary Call to Action -->
       <section class="bg-green-700 text-white py-12">
@@ -856,43 +893,6 @@
                 <span class="lang-en">Protection from Complications</span>
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Video Explanation Section -->
-      <section class="py-16 bg-white">
-        <div class="container mx-auto px-6">
-          <h2
-            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
-          >
-            <span class="lang-ru">Как это работает? Смотрите видео!</span>
-            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
-            <span class="lang-en">How Does It Work? Watch the Video!</span>
-          </h2>
-          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
-            <span class="lang-ru"
-              >Узнайте все о преимуществах "Диафит Асс" в этом коротком и
-              информативном видео.</span
-            >
-            <span class="lang-uz"
-              >Ushbu qisqa va ma'lumotli videoda "Diafit Ass"ning barcha
-              afzalliklari haqida bilib oling.</span
-            >
-            <span class="lang-en"
-              >Learn all about the benefits of "Diafit Ass" in this short and
-              informative video.</span
-            >
-          </p>
-          <div class="video-container">
-            <iframe
-              src="https://www.youtube.com/embed//-dnaOl9SINM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
           </div>
         </div>
       </section>
