--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -187,7 +187,7 @@
             <img
               src="assets/IMG_2321.png"
               alt="Изображение продукта stopartroz"
-              class="rounded-lg shadow-2xl max-w-xs"
+              class="rounded-lg max-w-xs"
               width="150"
               height="150"
             />
@@ -273,7 +273,7 @@
             <img
               src="assets/IMG_2321.png"
               alt="Изображение продукта stoprtroz"
-              class="rounded-lg shadow-2xl max-w-sm"
+              class="rounded-lg max-w-sm"
               width="150"
               height="150"
             />
@@ -752,8 +752,49 @@
         </div>
       </section>
 
+      <!-- Video Explanation Section -->
+      <section class="py-16 bg-background-dark">
+        <div class="container mx-auto px-6">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-center text-white mb-4"
+          >
+            <span class="lang-ru">Узнайте больше за 60 секунд</span>
+            <span class="lang-uz"
+              >"Sila Max Lux" haqida 60 soniyada ko'proq bilib oling</span
+            >
+            <span class="lang-en"
+              >Learn More About "Sila Max Lux" in 60 Seconds</span
+            >
+          </h2>
+          <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">
+            <span class="lang-ru"
+              >Наш эксперт подробно рассказывает о составе, принципе действия и
+              преимуществах продукта в этом коротком видео.</span
+            >
+            <span class="lang-uz"
+              >Bizning mutaxassisimiz ushbu qisqa videoda mahsulotning tarkibi,
+              ishlash printsipi va afzalliklari haqida batafsil ma'lumot
+              beradi.</span
+            >
+            <span class="lang-en"
+              >Our expert explains the composition, principle of action, and
+              benefits of the product in this short video.</span
+            >
+          </p>
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/UP6Qth-UmtM"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
       <!-- 6. Expert Opinion -->
-      <section class="section-gradient py-16">
+      <!-- <section class="section-gradient py-16">
         <div class="container mx-auto px-6">
           <div
             class="bg-background-dark rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
@@ -815,7 +856,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- 7. Secondary Call to Action -->
       <section class="bg-primary-color text-white py-12">
@@ -955,48 +996,6 @@
                 <span class="lang-en">Reduced Swelling</span>
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Video Explanation Section -->
-      <section class="py-16 bg-background-dark">
-        <div class="container mx-auto px-6">
-          <h2
-            class="text-3xl md:text-4xl font-bold text-center text-white mb-4"
-          >
-            <span class="lang-ru">Узнайте больше за 60 секунд</span>
-            <span class="lang-uz"
-              >"Sila Max Lux" haqida 60 soniyada ko'proq bilib oling</span
-            >
-            <span class="lang-en"
-              >Learn More About "Sila Max Lux" in 60 Seconds</span
-            >
-          </h2>
-          <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">
-            <span class="lang-ru"
-              >Наш эксперт подробно рассказывает о составе, принципе действия и
-              преимуществах продукта в этом коротком видео.</span
-            >
-            <span class="lang-uz"
-              >Bizning mutaxassisimiz ushbu qisqa videoda mahsulotning tarkibi,
-              ishlash printsipi va afzalliklari haqida batafsil ma'lumot
-              beradi.</span
-            >
-            <span class="lang-en"
-              >Our expert explains the composition, principle of action, and
-              benefits of the product in this short video.</span
-            >
-          </p>
-          <div class="video-container">
-            <iframe
-              src="https://www.youtube.com/embed/UP6Qth-UmtM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
           </div>
         </div>
       </section>
