--- a/venofit.html
+++ b/venofit.html
@@ -163,7 +163,7 @@
             <img
               src="assets/33. Венофит Капсула - bottle.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg shadow-2xl max-w-xs"
+              class="rounded-lg max-w-xs"
               width="150"
               height="150"
             />
@@ -249,7 +249,7 @@
             <img
               src="assets/33. Венофит Капсула - bottle.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg shadow-2xl max-w-sm"
+              class="rounded-lg max-w-sm"
               width="150"
               height="150"
             />
@@ -526,8 +526,45 @@
         </div>
       </section>
 
-      <!-- 6. Expert Opinion -->
+      <!-- Video Explanation Section -->
       <section class="py-16 bg-white">
+        <div class="container mx-auto px-6">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
+          >
+            <span class="lang-ru">Как это работает? Смотрите видео!</span>
+            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
+            <span class="lang-en">How Does It Work? Watch the Video!</span>
+          </h2>
+          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
+            <span class="lang-ru"
+              >Узнайте все о преимуществах "Венофит" в этом коротком и
+              информативном видео.</span
+            >
+            <span class="lang-uz"
+              >Ushbu qisqa va ma'lumotli videoda "Venofit"ning barcha
+              afzalliklari haqida bilib oling.</span
+            >
+            <span class="lang-en"
+              >Learn all about the benefits of "Venofit" in this short and
+              informative video.</span
+            >
+          </p>
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/2ir4seiGZcA"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
+
+      <!-- 6. Expert Opinion -->
+      <!-- <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <div
             class="bg-green-50 rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
@@ -589,7 +626,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- 7. Secondary Call to Action -->
       <section class="bg-green-700 text-white py-12">
@@ -722,43 +759,6 @@
                 >
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Video Explanation Section -->
-      <section class="py-16 bg-white">
-        <div class="container mx-auto px-6">
-          <h2
-            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
-          >
-            <span class="lang-ru">Как это работает? Смотрите видео!</span>
-            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
-            <span class="lang-en">How Does It Work? Watch the Video!</span>
-          </h2>
-          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
-            <span class="lang-ru"
-              >Узнайте все о преимуществах "Венофит" в этом коротком и
-              информативном видео.</span
-            >
-            <span class="lang-uz"
-              >Ushbu qisqa va ma'lumotli videoda "Venofit"ning barcha
-              afzalliklari haqida bilib oling.</span
-            >
-            <span class="lang-en"
-              >Learn all about the benefits of "Venofit" in this short and
-              informative video.</span
-            >
-          </p>
-          <div class="video-container">
-            <iframe
-              src="https://www.youtube.com/embed//-dnaOl9SINM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
           </div>
         </div>
       </section>
