--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <img
               src="assets/img/bad.png"
               alt="Изображение продукта Супер Память"
-              class="rounded-lg shadow-2xl max-w-xs"
+              class="rounded-lg max-w-xs"
               width="150"
               height="150"
             />
@@ -262,7 +262,7 @@
             <img
               src="assets/img/bad.png"
               alt="Изображение продукта Супер Память"
-              class="rounded-lg shadow-2xl max-w-sm"
+              class="rounded-lg max-w-sm"
               width="150"
               height="150"
             />
@@ -968,7 +968,7 @@
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <img
                 class="w-full h-48 object-cover"
-                src="assets/img/40.jpg"
+                src="assets/medium-shot-people-blowing-candles.jpg"
                 alt="Люди после 40"
               />
               <div class="p-6">
@@ -1126,8 +1126,45 @@
         </div>
       </section>
 
-      <!-- 6. Expert Opinion -->
+      <!-- Video Explanation Section -->
       <section class="py-16 bg-white">
+        <div class="container mx-auto px-6">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
+          >
+            <span class="lang-ru">Как это работает? Смотрите видео!</span>
+            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
+            <span class="lang-en">How Does It Work? Watch the Video!</span>
+          </h2>
+          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
+            <span class="lang-ru"
+              >Узнайте все о преимуществах "Супер Память" в этом коротком и
+              информативном видео.</span
+            >
+            <span class="lang-uz"
+              >Ushbu qisqa va ma'lumotli videoda "Super Pamyat"ning barcha
+              afzalliklari haqida bilib oling.</span
+            >
+            <span class="lang-en"
+              >Learn all about the benefits of "Super Memory" in this short and
+              informative video.</span
+            >
+          </p>
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed//-dnaOl9SINM"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
+
+      <!-- 6. Expert Opinion -->
+      <!-- <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <div
             class="bg-green-50 rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
@@ -1183,7 +1220,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- 7. Secondary Call to Action -->
       <section class="bg-green-700 text-white py-12">
@@ -1317,43 +1354,6 @@
                 ><span class="lang-en">Better Mood</span>
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Video Explanation Section -->
-      <section class="py-16 bg-white">
-        <div class="container mx-auto px-6">
-          <h2
-            class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
-          >
-            <span class="lang-ru">Как это работает? Смотрите видео!</span>
-            <span class="lang-uz">Bu qanday ishlaydi? Videoni ko'ring!</span>
-            <span class="lang-en">How Does It Work? Watch the Video!</span>
-          </h2>
-          <p class="text-center text-gray-600 mb-12 max-w-3xl mx-auto">
-            <span class="lang-ru"
-              >Узнайте все о преимуществах "Супер Память" в этом коротком и
-              информативном видео.</span
-            >
-            <span class="lang-uz"
-              >Ushbu qisqa va ma'lumotli videoda "Super Pamyat"ning barcha
-              afzalliklari haqida bilib oling.</span
-            >
-            <span class="lang-en"
-              >Learn all about the benefits of "Super Memory" in this short and
-              informative video.</span
-            >
-          </p>
-          <div class="video-container">
-            <iframe
-              src="https://www.youtube.com/embed//-dnaOl9SINM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
           </div>
         </div>
       </section>
