--- a/silamax.html
+++ b/silamax.html
@@ -191,7 +191,7 @@
             <img
               src="assets/20. Сила Макс Капсула - bottle.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg shadow-2xl max-w-xs"
+              class="rounded-lg max-w-xs"
               width="150"
               height="150"
             />
@@ -277,7 +277,7 @@
             <img
               src="assets/20. Сила Макс Капсула - bottle.png"
               alt="Изображение продукта silamax"
-              class="rounded-lg shadow-2xl max-w-sm"
+              class="rounded-lg max-w-sm"
               width="150"
               height="150"
             />
@@ -528,7 +528,7 @@
           >
             <div class="md:w-1/3">
               <img
-                src="https://placehold.co/500x500/1f2937/d4af37?text=ЭНЕРГИЯ"
+                src="assets/3d-render-flash-lightning-sale-thunder-bolt-icon.jpg"
                 alt="Изображение энергии и силы"
                 class="rounded-lg shadow-xl"
               />
@@ -634,8 +634,50 @@
         </div>
       </section>
 
-      <!-- 6. Expert Opinion -->
+      <!-- Video Explanation Section -->
       <section class="py-16 bg-background-dark">
+        <div class="container mx-auto px-6">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-center text-white mb-4"
+          >
+            <span class="lang-ru">Узнайте больше за 60 секунд</span>
+            <span class="lang-uz"
+              >"Sila Max Lux" haqida 60 soniyada ko'proq bilib oling</span
+            >
+            <span class="lang-en"
+              >Learn More About "Sila Max Lux" in 60 Seconds</span
+            >
+          </h2>
+          <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">
+            <span class="lang-ru"
+              >Наш эксперт подробно рассказывает о составе, принципе действия и
+              преимуществах продукта в этом коротком видео.</span
+            >
+            <span class="lang-uz"
+              >Bizning mutaxassisimiz ushbu qisqa videoda mahsulotning tarkibi,
+              ishlash printsipi va afzalliklari haqida batafsil ma'lumot
+              beradi.</span
+            >
+            <span class="lang-en"
+              >Our expert explains the composition, principle of action, and
+              benefits of the product in this short video.</span
+            >
+          </p>
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/UP6Qth-UmtM"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
+
+      <!-- 6. Expert Opinion -->
+      <!-- <section class="py-16 bg-background-dark">
         <div class="container mx-auto px-6">
           <div
             class="bg-background-light rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
@@ -696,7 +738,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- 7. Secondary Call to Action -->
       <section class="bg-primary-color text-white py-12">
@@ -836,48 +878,6 @@
                 <span class="lang-en">Vibrant Intimate Life</span>
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Video Explanation Section -->
-      <section class="py-16 bg-background-dark">
-        <div class="container mx-auto px-6">
-          <h2
-            class="text-3xl md:text-4xl font-bold text-center text-white mb-4"
-          >
-            <span class="lang-ru">Узнайте больше за 60 секунд</span>
-            <span class="lang-uz"
-              >"Sila Max Lux" haqida 60 soniyada ko'proq bilib oling</span
-            >
-            <span class="lang-en"
-              >Learn More About "Sila Max Lux" in 60 Seconds</span
-            >
-          </h2>
-          <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">
-            <span class="lang-ru"
-              >Наш эксперт подробно рассказывает о составе, принципе действия и
-              преимуществах продукта в этом коротком видео.</span
-            >
-            <span class="lang-uz"
-              >Bizning mutaxassisimiz ushbu qisqa videoda mahsulotning tarkibi,
-              ishlash printsipi va afzalliklari haqida batafsil ma'lumot
-              beradi.</span
-            >
-            <span class="lang-en"
-              >Our expert explains the composition, principle of action, and
-              benefits of the product in this short video.</span
-            >
-          </p>
-          <div class="video-container">
-            <iframe
-              src="https://www.youtube.com/embed/UP6Qth-UmtM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
           </div>
         </div>
       </section>
