--- a/index.html
+++ b/index.html
@@ -483,18 +483,18 @@
                 ><span class="lang-en">Tinnitus</span>
               </p>
             </div>
-            <div class="flex flex-col items-center">
+            <!-- <div class="flex flex-col items-center">
               <img
                 class="w-24 h-24 rounded-full mb-4 object-cover"
                 src="assets/img/mess.jpg"
                 alt="Спутанность мыслей"
               />
-              <p class="font-semibold text-gray-700">
+              <!-- <p class="font-semibold text-gray-700">
                 <span class="lang-ru">Спутанность мыслей</span
                 ><span class="lang-uz">Fikrlarning chalkashishi</span
                 ><span class="lang-en">Brain Fog</span>
-              </p>
-            </div>
+              </p> -->
+            <!-- </div> -->
           </div>
         </div>
       </section>
