--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -159,7 +159,7 @@
         <div class="mb-6">
           <img
             src="assets/STOP ARTIROZ_RUSSIOAN_ WHITE.png"
-            alt="Логотип silamax"
+            alt="Логотип stopartroz"
             height="150"
             width="200"
             class="max-w-full h-auto mx-auto"
@@ -760,10 +760,10 @@
           >
             <span class="lang-ru">Узнайте больше за 60 секунд</span>
             <span class="lang-uz"
-              >"Sila Max Lux" haqida 60 soniyada ko'proq bilib oling</span
+              >"Stop Artroz" haqida 60 soniyada ko'proq bilib oling</span
             >
             <span class="lang-en"
-              >Learn More About "Sila Max Lux" in 60 Seconds</span
+              >Learn More About "Stop Artroz" in 60 Seconds</span
             >
           </h2>
           <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">
