--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
     <main>
       <!-- 2. Why This Matters (Symptoms Section) -->
-      <section class="py-16 bg-white">
+      <section class="py-16 section-gradient">
         <div class="container mx-auto px-6">
           <h2
             class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-4"
@@ -437,7 +437,7 @@
           >
             <div class="flex flex-col items-center">
               <img
-                class="w-24 h-24 rounded-full mb-4 object-cover"
+                class="w-24 h-24 rounded-full mb-4 object-cover border-4 border-green-600"
                 src="assets/img/forgot.jpg"
                 alt="Забывчивость"
               />
@@ -449,7 +449,7 @@
             </div>
             <div class="flex flex-col items-center">
               <img
-                class="w-24 h-24 rounded-full mb-4 object-cover"
+                class="w-24 h-24 rounded-full mb-4 object-cover border-4 border-green-600"
                 src="assets/img/tired.jpg"
                 alt="Усталость"
               />
@@ -461,7 +461,7 @@
             </div>
             <div class="flex flex-col items-center">
               <img
-                class="w-24 h-24 rounded-full mb-4 object-cover"
+                class="w-24 h-24 rounded-full mb-4 object-cover border-4 border-green-600"
                 src="assets/img/anxious.jpg"
                 alt="Тревожность"
               />
@@ -473,7 +473,7 @@
             </div>
             <div class="flex flex-col items-center">
               <img
-                class="w-24 h-24 rounded-full mb-4 object-cover"
+                class="w-24 h-24 rounded-full mb-4 object-cover border-4 border-green-600"
                 src="assets/img/ears.jpg"
                 alt="Шум в ушах"
               />
@@ -1694,6 +1694,53 @@
         document.querySelectorAll('.orderForm').forEach((form) => {
           form.addEventListener('submit', handleFormSubmit);
         });
+      });
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const langRuBtn = document.getElementById('lang-ru-btn');
+        const langUzBtn = document.getElementById('lang-uz-btn');
+        const langEnBtn = document.getElementById('lang-en-btn');
+        const langSwitcher = langRuBtn?.parentElement?.parentElement; // блок тогглера
+        const html = document.documentElement;
+
+        function setLanguage(lang) {
+          html.lang = lang;
+          if (langRuBtn) langRuBtn.classList.toggle('active', lang === 'ru');
+          if (langUzBtn) langUzBtn.classList.toggle('active', lang === 'uz');
+          if (langEnBtn) langEnBtn.classList.toggle('active', lang === 'en');
+        }
+
+        // 1. Проверяем URL
+        const params = new URLSearchParams(window.location.search);
+        const urlLang = params.get('lang');
+
+        if (urlLang && ['ru', 'uz', 'en'].includes(urlLang)) {
+          setLanguage(urlLang);
+
+          // если язык в ссылке → скрываем тогглер
+          if (langSwitcher) langSwitcher.style.display = 'none';
+        } else {
+          // 2. Если языка нет в ссылке → используем localStorage или ru
+          const savedLang = localStorage.getItem('language') || 'ru';
+          setLanguage(savedLang);
+
+          // 3. Навешиваем события на кнопки
+          if (langRuBtn)
+            langRuBtn.addEventListener('click', () => {
+              setLanguage('ru');
+              localStorage.setItem('language', 'ru');
+            });
+          if (langUzBtn)
+            langUzBtn.addEventListener('click', () => {
+              setLanguage('uz');
+              localStorage.setItem('language', 'uz');
+            });
+          if (langEnBtn)
+            langEnBtn.addEventListener('click', () => {
+              setLanguage('en');
+              localStorage.setItem('language', 'en');
+            });
+        }
       });
     </script>
   </body>
