--- a/silamax.html
+++ b/silamax.html
@@ -84,8 +84,8 @@
       }
       .discount-bubble {
         position: absolute;
-        top: -20px;
-        right: -20px;
+        top: 0;
+        right: 0;
         background-color: #ef4444; /* red-500 */
         color: white;
         width: 80px;
@@ -96,7 +96,7 @@
         justify-content: center;
         font-size: 1.5rem;
         font-weight: 900;
-        transform: rotate(15deg);
+        transform: translate(-140%, 40%) rotate(15deg);
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
       .video-container {
@@ -189,11 +189,11 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/20. Сила Макс Капсула - bottle.png"
+              src="assets/img/_06 Сила Макс Люкс.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg max-w-xs"
-              width="150"
-              height="150"
+              class="rounded-lg max-w-md"
+              width="450"
+              height="450"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -275,11 +275,11 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/20. Сила Макс Капсула - bottle.png"
+              src="assets/img/_06 Сила Макс Люкс.png"
               alt="Изображение продукта silamax"
-              class="rounded-lg max-w-sm"
-              width="150"
-              height="150"
+              class="rounded-lg max-w-lg"
+              width="950"
+              height="950"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -665,7 +665,7 @@
           </p>
           <div class="video-container">
             <iframe
-              src="https://www.youtube.com/embed/UP6Qth-UmtM"
+              src="https://www.youtube.com/embed/p8_SfHSBosI"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -980,9 +980,9 @@
             class="max-w-md mx-auto bg-background-light/50 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/10"
           >
             <img
-              src="assets/20. Сила Макс Капсула - bottle.png"
+              src="assets/img/_06 Сила Макс Люкс.png"
               alt="Продукт Сила Макс Люкс"
-              class="w-1/2 mx-auto mb-4"
+              class="w-3/2 mx-auto mb-4"
             />
             <p class="mb-4 text-secondary-color font-bold">
               <span class="lang-ru"
