--- a/venofit.html
+++ b/venofit.html
@@ -65,8 +65,8 @@
       }
       .discount-bubble {
         position: absolute;
-        top: -20px;
-        right: -20px;
+        top: 0;
+        right: 0;
         background-color: #ef4444; /* red-500 */
         color: white;
         width: 80px;
@@ -77,7 +77,7 @@
         justify-content: center;
         font-size: 1.5rem;
         font-weight: 900;
-        transform: rotate(15deg);
+        transform: translate(-140%, 40%) rotate(15deg);
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
       .video-container {
@@ -161,11 +161,11 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/33. Венофит Капсула - bottle.png"
+              src="assets/img/_02 Бенофит.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg max-w-xs"
-              width="150"
-              height="150"
+              class="rounded-lg max-w-md"
+              width="450"
+              height="450"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -247,11 +247,11 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/33. Венофит Капсула - bottle.png"
+              src="assets/img/_02 Бенофит.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg max-w-sm"
-              width="150"
-              height="150"
+              class="rounded-lg max-w-lg"
+              width="950"
+              height="950"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -552,7 +552,7 @@
           </p>
           <div class="video-container">
             <iframe
-              src="https://www.youtube.com/embed/2ir4seiGZcA"
+              src="https://www.youtube.com/embed/vmsWka2G-tk"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -892,9 +892,9 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/33. Венофит Капсула - bottle.png"
+              src="assets/img/_02 Бенофит.png"
               alt="Продукт Венофит"
-              class="w-1/2 mx-auto mb-4"
+              class="w-3/2 mx-auto mb-4"
             />
             <p class="mb-4 text-yellow-300 font-bold">
               <span class="lang-ru"
