maybe fix the issue with images

--- a/diafitass.html
+++ b/diafitass.html
@@ -165,7 +165,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_05 Диафит АСС.png"
+              src="assets/img/5.png"
               alt="Изображение продукта Diafit Ass"
               class="rounded-lg max-w-md"
               width="450"
@@ -251,7 +251,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_05 Диафит АСС.png""
+              src="assets/img/5.png""
               alt="Изображение продукта Diafit Ass"
               class="rounded-lg max-w-lg"
               width="950"
@@ -1019,7 +1019,7 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/img/_05 Диафит АСС.png"
+              src="assets/img/5.png"
               alt="Продукт Диафит АСС"
               class="w-3/2 mx-auto mb-4"
             />
