--- a/geptrafit.html
+++ b/geptrafit.html
@@ -167,7 +167,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_04 Гептрафит.png"
+              src="assets/img/4.png"
               alt="Изображение продукта geptrafit"
               class="rounded-lg max-w-md"
               width="450"
@@ -255,7 +255,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_04 Гептрафит.png"
+              src="assets/img/4.png"
               alt="Изображение продукта Geptrafit"
               class="rounded-lg max-w-lg"
               width="950"
@@ -1034,7 +1034,7 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/img/_04 Гептрафит.png"
+              src="assets/img/4.png"
               alt="Продукт Гептрафит"
               class="w-3/2 mx-auto mb-4"
             />
