--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_03 Супер ПамятЬ.png"
+              src="assets/img/3.png"
               alt="Изображение продукта Супер Память"
               class="rounded-lg max-w-md"
               width="450"
@@ -260,7 +260,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_03 Супер ПамятЬ.png"
+              src="assets/img/3.png"
               alt="Изображение продукта Супер Память"
               class="rounded-lg max-w-lg"
               width="950"
@@ -1471,7 +1471,7 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/img/_03 Супер ПамятЬ.png"
+              src="assets/img/3.png"
               alt="Продукт Супер Память"
               class="w-3/2 mx-auto mb-4"
             />
