--- a/silamax.html
+++ b/silamax.html
@@ -189,7 +189,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_06 Сила Макс Люкс.png"
+              src="assets/img/2.png"
               alt="Изображение продукта Venofit"
               class="rounded-lg max-w-md"
               width="450"
@@ -275,7 +275,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_06 Сила Макс Люкс.png"
+              src="assets/img/2.png"
               alt="Изображение продукта silamax"
               class="rounded-lg max-w-lg"
               width="950"
@@ -980,7 +980,7 @@
             class="max-w-md mx-auto bg-background-light/50 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/10"
           >
             <img
-              src="assets/img/_06 Сила Макс Люкс.png"
+              src="assets/img/2.png"
               alt="Продукт Сила Макс Люкс"
               class="w-3/2 mx-auto mb-4"
             />
