--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -185,7 +185,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_01 Стоп Артроз.png"
+              src="assets/img/1.png"
               alt="Изображение продукта stopartroz"
               class="rounded-lg max-w-md"
               width="450"
@@ -271,7 +271,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_01 Стоп Артроз.png"
+              src="assets/img/1.png"
               alt="Изображение продукта stoprtroz"
               class="rounded-lg max-w-lg"
               width="950"
@@ -1124,7 +1124,7 @@
             class="max-w-md mx-auto bg-background-light/50 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/10"
           >
             <img
-              src="assets/img/_01 Стоп Артроз.png"
+              src="assets/img/1.png"
               alt="Продукт Стоп Артроз"
               class="w-3/2 mx-auto mb-4"
             />
