--- a/venofit.html
+++ b/venofit.html
@@ -161,7 +161,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_02 Бенофит.png"
+              src="assets/img/6.png"
               alt="Изображение продукта Venofit"
               class="rounded-lg max-w-md"
               width="450"
@@ -247,7 +247,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/_02 Бенофит.png"
+              src="assets/img/6.png"
               alt="Изображение продукта Venofit"
               class="rounded-lg max-w-lg"
               width="950"
@@ -892,7 +892,7 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/img/_02 Бенофит.png"
+              src="assets/img/6.png"
               alt="Продукт Венофит"
               class="w-3/2 mx-auto mb-4"
             />
